# cc2541-device

./: .gitignore  README.rst  requirements.txt  setup.cfg
cc2541/: cc2541.py  driver.py  driver_new.py  sensor.py  utils.py
