[metadata]
name = robotice-cc2541-device
summary = Robotice driver for BLE - CC2541
description-file =
    README.rst
author = Ales Komarek & Michael Kuty
author-email = mail@newt.cz & mail@majklk.cz
home-page = https://github.com/robotice-devices/cc2541-device
classifier =
    Development Status :: 3 - Alpha
    Topic :: System :: Software Distribution
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent

[files]
packages =
    cc2541

scripts =
    bin/robotice-cc2541

[entry_points]
console_script =
    cc2541 = cc2541:driver